// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: addLocation.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation addLocationmutation {
  addLocation(location: {locationId:"abc", name:"lol", type:AIRPORT}) {
    ... on AddLocationResponse {
      locationEdge {
        node {
          locationId
          name
          id
          type
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "addLocation": {
      "locationEdge": {
        "node": {
          "locationId": "abc",
          "name": "lol",
          "id": "TG9jYXRpb246YWJj",
          "type": "airport"
        }
      }
    }
  }
}
`;

exports[`matches expected output: addLocationError.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
mutation addLocationErrormutation {
  addLocation(location: {locationId:"abc", name:"", type:AIRPORT}) {
    ... on AddLocationResponse {
      locationEdge {
        node {
          locationId
          name
          id
          type
        }
      }
    }
    ... on AddLocationError {
      message
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "addLocation": {
      "message": "Please check your input, you must provide a name, and locationId must be a 3 letter code"
    }
  }
}
`;
